--- a/rozwiazania-dla-biznesu.html
+++ b/rozwiazania-dla-biznesu.html
@@ -1,84 +1,58 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rozwiązania dla Biznesu – Baltic Digital</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Rozwiązania dla Biznesu — BDI</title>
+  <meta name="description" content="Rozwiązania BDI dla biznesu: Transformacja (R-OaaS), Szkolenia i Badania/Certyfikacja."/>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Geist+Sans:wght@700;900&family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-50 text-gray-900">
-  <!-- Header -->
-  <header class="bg-white shadow">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <a href="index.html" class="flex items-center space-x-2">
-        <img src="assets/svg/Logo main.svg" alt="Baltic Digital Logo" class="h-10">
+<body class="bg-[#0A192F] text-white font-sans">
+
+  <header class="bg-[#112240]">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
+      <a href="index.html" class="flex items-center gap-3">
+        <img src="assets/svg/Logo main.svg" alt="Logo BDI" class="h-8">
+        <span class="text-[#64FFDA] font-bold">BDI</span>
       </a>
-      <nav class="space-x-6">
-        <a href="index.html" class="hover:text-blue-600">Strona główna</a>
-        <a href="rozwiazania-dla-biznesu.html" class="text-blue-600 font-semibold">Rozwiązania</a>
-        <a href="o-nas.html" class="hover:text-blue-600">O nas</a>
-        <a href="inicjatywy.html" class="hover:text-blue-600">Inicjatywy</a>
-        <a href="baza-wiedzy.html" class="hover:text-blue-600">Baza wiedzy</a>
-        <a href="kontakt.html" class="hover:text-blue-600">Kontakt</a>
+      <nav class="hidden md:flex gap-6">
+        <a href="index.html">Start</a>
+        <a href="rozwiazania-dla-biznesu.html" class="text-[#64FFDA] font-semibold">Rozwiązania</a>
+        <a href="o-nas.html">O nas</a>
+        <a href="o-nas-zespol.html">Zespół</a>
+        <a href="kontakt.html">Kontakt</a>
       </nav>
     </div>
   </header>
 
-  <!-- Hero -->
-  <section class="bg-blue-600 text-white py-16">
-    <div class="max-w-4xl mx-auto text-center px-6">
-      <h1 class="text-4xl font-bold mb-4">Rozwiązania dla Biznesu</h1>
-      <p class="text-lg">Baltic Digital wspiera firmy w budowaniu odporności cyfrowej dzięki sztucznej inteligencji, automatyzacji i badaniom B+R.</p>
-    </div>
-  </section>
+  <main class="max-w-6xl mx-auto px-4 py-12">
+    <h1 class="text-3xl font-black mb-4">Rozwiązania dla Biznesu</h1>
+    <p class="text-gray-300 mb-6">Kompleksowe usługi: wdrożenia (R-OaaS), szkolenia oraz badania i certyfikacja.</p>
 
-  <!-- 3 filary -->
-  <section class="max-w-7xl mx-auto py-16 px-6 grid md:grid-cols-3 gap-8">
-    <!-- Transformacja Cyfrowa -->
-    <div class="bg-white shadow rounded-xl p-6 hover:shadow-lg transition">
-      <div class="flex items-center justify-center h-12 w-12 bg-blue-100 text-blue-600 rounded-full mb-4">
-        <!-- Icon -->
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
-        </svg>
+    <section id="revops" class="grid md:grid-cols-2 gap-6 mb-8">
+      <div class="p-6 bg-[#112240] rounded">
+        <h2 class="text-xl font-semibold">Revenue Operations as a Service (R-OaaS)</h2>
+        <p class="text-gray-300 mt-2">Zarządzamy procesem przychodów end-to-end: strategia, CRM, automatyzacja, integracje i raportowanie. Bierzemy odpowiedzialność za wyniki.</p>
+        <a href="#" class="text-[#64FFDA] mt-4 inline-block">Porozmawiajmy →</a>
       </div>
-      <h3 class="text-xl font-semibold mb-2">Transformacja Cyfrowa</h3>
-      <p class="text-gray-600 mb-4">Kompleksowe wsparcie w budowaniu cyfrowej odporności: AI, automatyzacja procesów i integracje systemów.</p>
-      <a href="rozwiazania/transformacja-cyfrowa.html" class="text-blue-600 font-medium hover:underline">Dowiedz się więcej →</a>
-    </div>
 
-    <!-- Szkolenia -->
-    <div class="bg-white shadow rounded-xl p-6 hover:shadow-lg transition">
-      <div class="flex items-center justify-center h-12 w-12 bg-green-100 text-green-600 rounded-full mb-4">
-        <!-- Icon -->
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5zm0 7v-7"/>
-        </svg>
+      <div class="p-6 bg-[#112240] rounded">
+        <h2 class="text-xl font-semibold">Szkolenia Specjalistyczne</h2>
+        <p class="text-gray-300 mt-2">Portfolio praktycznych kursów z AI i cyberbezpieczeństwa (dofinansowanie BUR). Programy dopasowane do potrzeb MŚP i instytucji.</p>
+        <a href="#" class="text-[#64FFDA] mt-4 inline-block">Sprawdź ofertę →</a>
       </div>
-      <h3 class="text-xl font-semibold mb-2">Szkolenia</h3>
-      <p class="text-gray-600 mb-4">Programy edukacyjne w obszarach AI, cyberbezpieczeństwa i transformacji cyfrowej – praktyczne i dopasowane do biznesu.</p>
-      <a href="rozwiazania/szkolenia.html" class="text-green-600 font-medium hover:underline">Dowiedz się więcej →</a>
-    </div>
+    </section>
 
-    <!-- Badania i Certyfikacja -->
-    <div class="bg-white shadow rounded-xl p-6 hover:shadow-lg transition">
-      <div class="flex items-center justify-center h-12 w-12 bg-purple-100 text-purple-600 rounded-full mb-4">
-        <!-- Icon -->
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m2 0a9 9 0 11-18 0 9 9 0 0118 0z"/>
-        </svg>
-      </div>
-      <h3 class="text-xl font-semibold mb-2">Badania i Certyfikacja</h3>
-      <p class="text-gray-600 mb-4">Laboratoria B+R oraz jednostka certyfikująca – wsparcie w innowacjach i zapewnieniu jakości zgodnej z międzynarodowymi standardami.</p>
-      <a href="rozwiazania/badania-i-certyfikacja.html" class="text-purple-600 font-medium hover:underline">Dowiedz się więcej →</a>
-    </div>
-  </section>
+    <section id="badania" class="p-6 bg-[#112240] rounded">
+      <h2 class="text-xl font-semibold">Badania i Certyfikacja — Baltic AI & Cyber Lab</h2>
+      <p class="text-gray-300 mt-2">Budujemy regionalne laboratorium badawcze oraz jednostkę certyfikującą (droga do akredytacji PCA). Współprace B+R i audyty bezpieczeństwa.</p>
+      <a href="#" class="text-[#64FFDA] mt-4 inline-block">Dowiedz się więcej →</a>
+    </section>
+  </main>
 
-  <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-300 py-8 mt-16">
-    <div class="max-w-7xl mx-auto px-6 text-center">
-      <p>© 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
-    </div>
+  <footer class="bg-[#112240] py-8 text-center text-gray-400">
+    <div class="max-w-7xl mx-auto">© 2025 Baltic Digital Institute</div>
   </footer>
 </body>
 </html>
