--- a/baza-wiedzy.html
+++ b/baza-wiedzy.html
@@ -12,7 +12,7 @@
   <header class="bg-[#112240]">
     <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
       <a href="index.html" class="flex items-center gap-3">
-        <img src="assets/svg/Logo%20main.svg" alt="Logo BDI" class="h-8">
+        <img src="assets/svg/logo-main.svg" alt="Logo BDI" class="h-8">
         <span class="text-[#64FFDA] font-bold">BDI</span>
       </a>
       <nav class="hidden md:flex gap-6">
