--- a/kontakt.html
+++ b/kontakt.html
@@ -12,42 +12,27 @@
   <header class="bg-[#112240]">
     <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
       <a href="index.html" class="flex items-center gap-3">
-        <img src="assets/svg/Logo main.svg" alt="Logo BDI" class="h-8">
+        <img src="assets/svg/logo-main.svg" alt="Logo BDI" class="h-8">
         <span class="text-[#64FFDA] font-bold">BDI</span>
       </a>
-      <nav class="hidden md:flex gap-6">
-        <a href="index.html">Start</a>
-        <a href="o-nas.html">O nas</a>
-        <a href="o-nas-zespol.html">Zespół</a>
-        <a href="rozwiazania-dla-biznesu.html">Rozwiązania</a>
-      </nav>
     </div>
   </header>
 
   <main class="max-w-4xl mx-auto px-4 py-12">
     <h1 class="text-3xl font-black mb-4">Skontaktuj się z nami</h1>
-    <p class="text-gray-300 mb-6">Wypełnij formularz — odpowiemy najszybciej jak to możliwe. Jeśli wolisz, napisz bezpośrednio na <a href="mailto:office@baltic-digital.org" class="text-[#64FFDA]">office@baltic-digital.org</a>.</p>
+    <p class="text-gray-300 mb-6">Wypełnij formularz — odpowiemy najszybciej jak to możliwe. Jeśli chcesz, napisz bezpośrednio: <a href="mailto:office@baltic-digital.org" class="text-[#64FFDA]">office@baltic-digital.org</a>.</p>
 
-    <!-- EMBEDDED GOOGLE FORM -->
-    <div class="mb-6">
+    <div class="mb-6 bg-[#0f1724] p-4 rounded">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdxBdozm1NwBgaxoBVKHq1TcmwgR9sHYaQH_vp3yaFeN_HUGg/viewform?embedded=true"
               width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0" title="Formularz kontaktowy Baltic Digital Institute">Ładowanie…</iframe>
 
-      <!-- noscript fallback (link + basic mailto) -->
       <noscript>
         <p class="text-gray-300">Jeśli nie widzisz formularza, otwórz go bezpośrednio: <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxBdozm1NwBgaxoBVKHq1TcmwgR9sHYaQH_vp3yaFeN_HUGg/viewform" target="_blank" rel="noopener noreferrer" class="text-[#64FFDA]">Formularz kontaktowy (Google Forms)</a>.</p>
       </noscript>
     </div>
 
-    <!-- GDPR / RODO -->
     <section class="text-gray-400 text-sm bg-[#112240] p-4 rounded">
-      <p class="mb-2"><strong>RODO / Przetwarzanie danych:</strong> Wysyłając formularz, wyrażasz zgodę na przetwarzanie danych przez Baltic Digital Institute w celu obsługi zapytania. Administratorem danych jest Baltic Digital Institute. Masz prawo dostępu do swoich danych i do ich usunięcia. Jeśli chcesz, skontaktuj się: <a href="mailto:office@baltic-digital.org" class="text-[#64FFDA]">office@baltic-digital.org</a>.</p>
-    </section>
-
-    <section class="mt-8 text-gray-300">
-      <h2 class="text-lg font-semibold mb-2">Dane siedziby</h2>
-      <p>ul. Hołdu Pruskiego 6<br>80-322 Gdańsk, Polska</p>
-      <p class="mt-2 text-sm">NIP: 5213869944 • KRS: 0000890382</p>
+      <p class="mb-2"><strong>RODO / Przetwarzanie danych:</strong> Wysyłając formularz, wyrażasz zgodę na przetwarzanie danych przez Baltic Digital Institute w celu obsługi zapytania. Administratorem danych jest Baltic Digital Institute. Masz prawo dostępu do swoich danych i do ich usunięcia. Kontakt: <a href="mailto:office@baltic-digital.org" class="text-[#64FFDA]">office@baltic-digital.org</a>.</p>
     </section>
   </main>
 
