--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="bg-[color:var(--dark-steel)]">
     <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
       <a href="index.html" class="flex items-center gap-3">
-        <img src="assets/svg/Logo main.svg" alt="Logo Baltic Digital Institute" class="h-8 w-auto">
+        <img src="assets/svg/logo-main.svg" alt="Logo Baltic Digital Institute" class="h-8 w-auto">
         <span class="text-[color:var(--cyber-turq)] font-bold">Baltic Digital Institute</span>
       </a>
       <nav class="hidden md:flex gap-6 text-sm">
