--- a/o-nas-zespol.html
+++ b/o-nas-zespol.html
@@ -53,7 +53,6 @@
     <section class="max-w-6xl mx-auto px-4 py-6">
       <h2 class="text-2xl font-bold mb-4">Zespół operacyjny</h2>
       <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6">
-        <!-- Prezentuj realne zdjęcia lub placeholdery jeśli nie ma -->
         <article class="card p-6 text-center">
           <img src="assets/img/krzysztof-rek.jpg" alt="Krzysztof Rek — Prezes Zarządu" loading="lazy" class="w-32 h-32 rounded-full mx-auto object-cover mb-4">
           <h3 class="text-xl font-semibold">Krzysztof Rek</h3>
@@ -72,23 +71,28 @@
           <p class="text-[color:var(--muted)]">Wsparcie projektowe / regionalizm.</p>
         </article>
 
-        <!-- inne osoby (jeśli nie masz zdjęcia, użyj placeholder-portrait.jpg) -->
         <article class="card p-6 text-center">
-          <img src="assets/img/placeholder-portrait.jpg" alt="Placeholder — Adam Derbich" loading="lazy" class="w-32 h-32 rounded-full mx-auto object-cover mb-4">
-          <h3 class="text-xl font-semibold">Adam Derbich</h3>
-          <p class="text-[color:var(--muted)]">Administrator Systemów i Bezpieczeństwa.</p>
-        </article>
-
-        <article class="card p-6 text-center">
-          <img src="assets/img/placeholder-portrait.jpg" alt="Placeholder — Olga Szudzik" loading="lazy" class="w-32 h-32 rounded-full mx-auto object-cover mb-4">
+          <img src="assets/img/placeholder-portrait.jpg" alt="Olga Szudzik — Project Manager" loading="lazy" class="w-32 h-32 rounded-full mx-auto object-cover mb-4">
           <h3 class="text-xl font-semibold">Olga Szudzik</h3>
           <p class="text-[color:var(--muted)]">Project Manager / Koordynator komunikacji (p.o.).</p>
         </article>
 
         <article class="card p-6 text-center">
-          <img src="assets/img/placeholder-portrait.jpg" alt="Placeholder — Marta Firlej" loading="lazy" class="w-32 h-32 rounded-full mx-auto object-cover mb-4">
+          <img src="assets/img/placeholder-portrait.jpg" alt="Marta Firlej — Główna księgowa" loading="lazy" class="w-32 h-32 rounded-full mx-auto object-cover mb-4">
           <h3 class="text-xl font-semibold">Marta Firlej</h3>
           <p class="text-[color:var(--muted)]">Główna księgowa.</p>
+        </article>
+
+        <article class="card p-6 text-center">
+          <img src="assets/img/placeholder-portrait.jpg" alt="Krzysztof Lizak — Menedżer ds. Administracji" loading="lazy" class="w-32 h-32 rounded-full mx-auto object-cover mb-4">
+          <h3 class="text-xl font-semibold">Krzysztof Lizak</h3>
+          <p class="text-[color:var(--muted)]">Menedżer ds. Administracji.</p>
+        </article>
+
+        <article class="card p-6 text-center">
+          <img src="assets/img/placeholder-portrait.jpg" alt="Gosia — Lider Sprzedaży" loading="lazy" class="w-32 h-32 rounded-full mx-auto object-cover mb-4">
+          <h3 class="text-xl font-semibold">Gosia</h3>
+          <p class="text-[color:var(--muted)]">Lider Sprzedaży.</p>
         </article>
       </div>
     </section>
@@ -134,7 +138,7 @@
         </article>
 
         <article class="card p-5 text-center">
-          <img src="assets/img/placeholder-portrait.jpg" alt="Placeholder — Aleksandra Natalia Mogadorska" loading="lazy" class="w-28 h-28 rounded-full mx-auto mb-3 object-cover">
+          <img src="assets/img/placeholder-portrait.jpg" alt="Aleksandra Natalia Mogadorska — Rada Nadzorcza" loading="lazy" class="w-28 h-28 rounded-full mx-auto mb-3 object-cover">
           <h3 class="font-semibold">Aleksandra Natalia Mogadorska</h3>
           <p class="text-[color:var(--muted)] text-sm">Członek Rady Nadzorczej — profil uzupełniamy.</p>
         </article>
@@ -171,7 +175,6 @@
         </div>
       </div>
     </section>
-
   </main>
 
   <footer class="bg-[color:var(--dark-steel)] text-[color:var(--muted)] py-8 text-center">
@@ -181,7 +184,6 @@
   </footer>
 
   <script>
-    // prosty mobile toggle
     const btn = document.getElementById('mobile-toggle');
     const menu = document.getElementById('mobile-menu');
     if (btn) btn.addEventListener('click', () => {
